--- a/LangChain/.env
+++ b/LangChain/.env
@@ -1,3 +1,3 @@
-OPENAI_API_KEY="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"
-LANGCHAIN_API_KEY="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"
+OPENAI_API_KEY="replace your key"
+LANGCHAIN_API_KEY="replace key"
 LANGCHAIN_PROJECT="GenAIAppWithOpenAI"
